policies/5.appsec/7.appsec.paymentservice.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: appsec.paymentservice
  namespace: online-boutique
spec:
  tier: appsec
  order: 600
  selector: app == "paymentservice"
  serviceAccountSelector: ''
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == "checkoutservice"
      destination:
        ports:
          - '50051'
  types:
    - Ingress
